[gd_scene load_steps=8 format=2]

[ext_resource path="res://Background.gd" type="Script" id=1]
[ext_resource path="res://space_gas.shader" type="Shader" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/color = null
shader_param/fade = null

[node name="Background" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="FarStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 0.01 )

[node name="FarStars" type="Sprite" parent="ParallaxBackground/FarStars"]
position = Vector2( 320, 180 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarGas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="FarGas1" type="Sprite" parent="ParallaxBackground/FarGas"]
material = SubResource( 3 )
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="FarGas2" type="Sprite" parent="ParallaxBackground/FarGas"]
material = SubResource( 4 )
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="MidStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )

[node name="MidStars" type="Sprite" parent="ParallaxBackground/MidStars"]
position = Vector2( 320, 180 )
region_rect = Rect2( 0, 0, 320, 180 )

[node name="MidGas" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )

[node name="MidGas1" type="Sprite" parent="ParallaxBackground/MidGas"]
material = SubResource( 5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="MidGas2" type="Sprite" parent="ParallaxBackground/MidGas"]
material = SubResource( 6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="NearStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )

[node name="NearStars" type="Sprite" parent="ParallaxBackground/NearStars"]
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
region_rect = Rect2( 0, 0, 320, 180 )
